--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@
   -ms-flex-direction: column;
   flex-direction: column;
   font-size: 16px;
+  overflow-x: hidden;
   width: 100vw;
 }
 
